--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,3 @@
+Win32/
+!SPIClient.dll.config
 __history/
-acmepos-ui/Win32/Debug/ActionsUnit.dcu
-acmepos-ui/Win32/Debug/ComPos.log
-acmepos-ui/Win32/Debug/DelphiPosDesktop.exe
-acmepos-ui/Win32/Debug/MainUnit.dcu
-acmepos-ui/Win32/Debug/mscorlib_TLB.dcu
-acmepos-ui/Win32/Debug/SPIClient_TLB.dcu
-acmepos-ui/DelphiPosDesktop.dproj.local
-acmepos-ui/DelphiPosDesktop.identcache
-acmepos-ui/DelphiPosDesktop.res
-acmepos-ui/DelphiPosDesktop.stat
-pizzapos/DelphiPos.dproj
-pizzapos/DelphiPos.dproj
-pizzapos/DelphiPos.dproj
-pizzapos/DelphiPos.dproj.local
-pizzapos/DelphiPos.dproj
-pizzapos/DelphiPos.identcache
-pizzapos/DelphiPos.res
-pizzapos/DelphiPos.stat
-pizzapos/Win32/Debug/ComPos.log
-pizzapos/Win32/Debug/DelphiPos.exe
-pizzapos/Win32/Debug/mscorlib_TLB.dcu
-pizzapos/Win32/Debug/SPIClient_TLB.dcu
