--- a/motelpos-ui/MotelDelphiPosDesktop.dproj
+++ b/motelpos-ui/MotelDelphiPosDesktop.dproj
@@ -97,6 +97,7 @@
         <DCCReference Include="ActionsUnit.pas">
             <Form>frmActions</Form>
         </DCCReference>
+        <DCCReference Include="ComponentNames.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -119,9 +120,9 @@
                 </Source>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\DelphiPosDesktop.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="Win32\Debug\MotelDelphiPosDesktop.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
-                        <RemoteName>DelphiPosDesktop.exe</RemoteName>
+                        <RemoteName>MotelDelphiPosDesktop.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
